<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChicagoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ChicagoMenuTitle"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/chicagoImage"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:src="@drawable/chicagomain" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose a flavor"
                android:textColor="@color/black"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/chicagoflavors"
                    android:layout_width="250dp"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="389dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="411dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ChooseSize"
                        android:textColor="@color/black"
                        android:textAlignment="center" />

                    <RadioGroup
                        android:id="@+id/chicagoSize"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/chicagoSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Small"
                            android:onClick="sizeOnClicked"/>

                        <RadioButton
                            android:id="@+id/chicagoMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Medium"
                            android:onClick="sizeOnClicked"/>

                        <RadioButton
                            android:id="@+id/chicagoLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Large"
                            android:onClick="sizeOnClicked"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AvailibleToppings"
                        android:textColor="@color/black"
                        android:textAlignment="center" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/toppingsAvailible"
                        android:layout_width="match_parent"
                        android:layout_height="269dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_weight="1"
                        android:text="@string/SelectedToppings"
                        android:textColor="@color/black"
                        android:textAlignment="center"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/toppingsRemove"
                        android:layout_width="match_parent"
                        android:layout_height="285dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@string/Price" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/chicagoPrice"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="placeOrder"
                android:text="@string/AddPizza" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>